# word2pdf

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
tests/: test_pdf.py  test_validation.py  test_word.py  test_word2pdf.py
tests/mocks/: tmp.doc
word2pdf/: pdf.py  validation.py  word.py  word2pdf.py
